third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/freeze_combo_invalid.exp

Diagnostics:
error: cannot pass mutable reference in local `s`, which is still borrowed, as function argument
   ┌─ tests/reference-safety/v1-tests/freeze_combo_invalid.move:13:9
   │
12 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- previous mutable field borrow
13 │         freeze(s);
   │         ^^^^^^^^^ passed here

error: cannot pass mutable reference in local `s`, which is still borrowed, as function argument
   ┌─ tests/reference-safety/v1-tests/freeze_combo_invalid.move:20:9
   │
19 │         if (cond) f = &mut s.f else f = &mut s.g;
   │                       --------          -------- previous mutable field borrow
   │                       │
   │                       previous mutable field borrow
20 │         freeze(s);
   │         ^^^^^^^^^ passed here
